# rs-mdbook-callouts

./: Cargo.toml
.github/workflows/: dependabot.yml  releases.yml
assets/: style.css
